<resources>
    <string name="app_name">Github Connect</string>
    <string name="user_name">Username</string>
    <string name="search_hint">Find User</string>
    <string name="name">Name</string>
    <string name="user_location">Location</string>
    <string name="user_company">Company</string>
    <string name="label_user_repo">Total Repository</string>
    <string name="user_count_repo">0</string>
    <string name="tab_text_follower">Follower</string>
    <string name="tab_text_following">Following</string>
    <string name="main_first_load">Insert username first</string>
    <string name="language_setting">Change Language Settings</string>
    <string name="favorite">Favorite</string>
    <string name="daily_reminder">Daily Reminder (Active 09.00 AM)</string>
    <string name="added">Added to Favorite</string>
    <string name="error_insert">Please try again</string>
    <string name="deleted">Deleted from favorite</string>
    <string name="title">Github Connect</string>
    <string name="favorite_title">Favorite Users</string>

</resources>